dc1/scripts/gateway_manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
  creationTimestamp: "2025-03-03T23:42:18Z"
  generation: 5
  labels:
    component: api-gateway
    gateway.consul.hashicorp.com/created: "1740834356"
    gateway.consul.hashicorp.com/managed: "true"
    gateway.consul.hashicorp.com/name: my-gateway
    gateway.consul.hashicorp.com/namespace: consul
  name: my-gateway
  namespace: consul
  ownerReferences:
  - apiVersion: gateway.networking.k8s.io/v1beta1
    blockOwnerDeletion: true
    controller: true
    kind: Gateway
    name: my-gateway
    uid: eeffc5e2-f3d4-454b-863b-fbe4c02ff77d
  resourceVersion: "1451891"
  uid: 5f3a4fb7-76e6-4772-b22c-f41f4975f991
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      component: api-gateway
      gateway.consul.hashicorp.com/created: "1740834356"
      gateway.consul.hashicorp.com/managed: "true"
      gateway.consul.hashicorp.com/name: my-gateway
      gateway.consul.hashicorp.com/namespace: consul
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        consul.hashicorp.com/connect-inject: "false"
        consul.hashicorp.com/gateway-consul-service-name: my-gateway
        consul.hashicorp.com/gateway-kind: api-gateway
        prometheus.io/path: /metrics
        prometheus.io/port: "20200"
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        component: api-gateway
        gateway.consul.hashicorp.com/created: "1740834356"
        gateway.consul.hashicorp.com/managed: "true"
        gateway.consul.hashicorp.com/name: my-gateway
        gateway.consul.hashicorp.com/namespace: consul
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  component: api-gateway
                  gateway.consul.hashicorp.com/created: "1740834356"
                  gateway.consul.hashicorp.com/managed: "true"
                  gateway.consul.hashicorp.com/name: my-gateway
                  gateway.consul.hashicorp.com/namespace: consul
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - args:
        - -addresses
        - consul-server.consul.svc
        - -grpc-port=8502
        - -proxy-service-id-path=/consul/connect-inject/proxyid
        - -log-level=info
        - -log-json=false
        - -envoy-concurrency=1
        - -ca-certs=/consul/connect-inject/consul-ca.pem
        - -envoy-ready-bind-port=21000
        - -envoy-admin-bind-port=19000
        - -telemetry-prom-scrape-path=/metrics
        image: hashicorp/consul-dataplane:1.6.2
        imagePullPolicy: IfNotPresent
        name: my-gateway
        ports:
        - containerPort: 21000
          name: proxy-health
          protocol: TCP
        - containerPort: 20200
          name: prometheus
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: 21000
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        securityContext:
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsUser: 0
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /consul/connect-inject
          name: consul-connect-inject-data
        - mountPath: /consul/gateway-certificates
          name: consul-gateway-tls-certificates
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir:
          medium: Memory
        name: consul-connect-inject-data
      - name: consul-gateway-tls-certificates
        secret:
          defaultMode: 444
          optional: false
          secretName: my-gateway
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-03-04T01:25:37Z"
    lastUpdateTime: "2025-03-04T01:25:37Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-03-03T23:42:19Z"
    lastUpdateTime: "2025-03-04T01:43:31Z"
    message: ReplicaSet "my-gateway-567dd669df" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 5
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
