dc1/scripts/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: objs-fed
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 6060
      targetPort: 6060

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: objs-fed
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        consul.hashicorp.com/connect-inject: "true"
        consul.hashicorp.com/service-name: "frontend"
        consul.hashicorp.com/transparent-proxy: "true"   # <-- add this
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/metrics"
        consul.hashicorp.com/service-meta-version: "dc1"
    spec:
      containers:
        - name: frontend
          image: raviteja2711/birdwatcher-frontend:1.0.2
          ports:
            - containerPort: 6060
      serviceAccountName: frontend
