dc1/scripts/serf-wan.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul-wan
  namespace: consul
spec:
  type: NodePort
  selector:
    app: consul
    component: server
  ports:
    - name: serf-wan
      port: 8302
      targetPort: 8302
      protocol: TCP
      nodePort: 31306  # Or let it auto-assign
    - name: serf-wan-udp
      port: 8302
      targetPort: 8302
      protocol: UDP
      nodePort: 31306  # Use same or different as TCP based on your needs
