dc1/scripts/allow-all-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
  namespace: objs-fed
spec:
  podSelector: {}
  ingress:
  - {}
  policyTypes:
  - Ingress
